[package]
name = "wgpu-slang-tonemappers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.54", features = ["derive"] }
flume = "0.12.0"
image = { version = "0.25.9", default-features = false, features = ["rayon", "exr", "png", "webp"] }
pollster = "0.4.0"
wgpu = "28.0.0"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
glob = "0.3.3"
